[tool.poetry]
name = "simulacion"
version = "0.1.0"
description = ""
authors = ["FedeG <federicogonzalez761@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
scipy = "^1.10.1"
numpy = "^1.24.3"
blue = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
